crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__enum_has_one_optional_no_fk.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl MemoSchema {
    pub async fn from_model(
        model: Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let author = Entity::find_related(Relation::Author)
            .filter(<Entity as sea_orm::EntityTrait>::PrimaryKey::eq(&model))
            .one(db)
            .await?;
        Ok(Self {
            id: model.id,
            author: author.map(|r| Box::new(<user::Schema as From<_>>::from(r))),
        })
    }
}
