crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__enum_has_one_optional_with_fk.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl MemoSchema {
    pub async fn from_model(
        model: Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let target_user = match &model.target_user_id {
            Some(fk_value) => user::Entity::find_by_id(fk_value.clone()).one(db).await?,
            None => None,
        };
        Ok(Self {
            id: model.id,
            target_user: target_user
                .map(|r| Box::new(<user::Schema as From<_>>::from(r))),
        })
    }
}
