crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_many_enum_fk_not_found.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let authored_posts: Vec<_> = vec![];
        Ok(Self {
            id: model.id,
            authored_posts: authored_posts
                .into_iter()
                .map(|r| <crate::models::post::Schema as From<_>>::from(r))
                .collect(),
        })
    }
}
