crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_many_fk_no_circular.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let tags = model.find_related(crate::models::tag::Entity).all(db).await?;
        Ok(Self {
            id: model.id,
            tags: tags
                .into_iter()
                .map(|r| crate::models::tag::Schema {
                    id: r.id,
                    name: r.name,
                    category_id: r.category_id,
                    category: None,
                })
                .collect(),
        })
    }
}
