crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_many_simple.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let memos = model.find_related(memo::Entity).all(db).await?;
        Ok(Self {
            id: model.id,
            memos: memos
                .into_iter()
                .map(|r| <memo::Schema as From<_>>::from(r))
                .collect(),
        })
    }
}
